NetworkE2E: stabilise app baseline for hook testing
- Fix Theme.NoDisplay crash: move finish() to main thread in onCreate(),
  background thread no longer calls finish()
- Add MiniHttpServer and MiniWebSocketServer inner classes to provide
  guaranteed loopback baselines for HTTP and WebSocket tests,
  eliminating dependency on external endpoints for primary coverage
- Replace single-endpoint strategy with ordered fallback lists for all
  external tests; reliable endpoints ordered first, httpbin.org demoted
  to last position after intermittent failures observed
- Remove broken WebSocket endpoint (CNAME with no DNS A/AAAA records);
  local echo server is now the primary WebSocket test path
- Add network security config permitting cleartext HTTP to loopback,
  required for MiniHttpServer; add per-test success/failure logging